# investor

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/stock_optimizer/: deprecated_bourse_tracking.py  main.py
libs/market_data/: models.py  yahoo.py
